--- a/HW_WF_2/MobileStore/MobileStore.csproj
+++ b/HW_WF_2/MobileStore/MobileStore.csproj
@@ -57,8 +57,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\OptionsRepository.cs" />
-    <Compile Include="Repository\PhoneRepository.cs" />
+    <Compile Include="Repository\Repository.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
